# ARC

./: .gitignore  ArchetypalClassifier.py  Dockerfile.flyte  FeatureExtraction.py  HelperFuncs.py  Makefile  MojoDojoCasa.py  README.md  pyproject.toml  reids_helpers.py  requirements-flyte.txt  requirements.txt  visual_base.py
config/: pressure_config.toml  test_config.toml  train_config.toml
flyte_workflows/: README.md  arc_encoder_training.py  config-local.yaml  config.yaml
scripts/: flyte_deploy.py  pressure_test.py  setup_gcp_instance.sh  train_contrastive_encoder.py  train_encoder.py  train_transformer.py  train_universal_encoder.py
src/arc/: ARCContrastiveEncoder.py  ARCDataAugmenter.py  ARCDataClasses.py  ARCEncoder.py  ARCLinker.py  ARCModule.py  ARCNetworks.py  ARCTesting.py  ARCTransformer.py  ARCUniversalEncoder.py  ARCUtils.py  ControlSequence.py  OutputGrid.py  config_loader.py  main.py  trails.py
tests/: test_arc_module.py  test_arc_suite.py
