[project]
name = "arc"
version = "0.1.0"
authors = [
  {name = "Reid Taylor"},
]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "beartype>=0.22.9",
    "ipykernel>=7.1.0",
    "jax>=0.8.2",
    "jaxtyping>=0.3.4",
    "lightning>=2.6.0",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "tensordict>=0.10.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
]
