[project]
name = "arc"
version = "0.1.0"
authors = [
  {name = "Reid Taylor"},
]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "beartype>=0.22.9",
    "flyte>=2.0.0b48",
    "flytekit>=1.16.12",
    "ipykernel>=7.1.0",
    "jax>=0.8.2",
    "jaxtyping>=0.3.4",
    "lightning>=2.6.0",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "pytest>=9.0.2",
    "tensorboard>=2.20.0",
    "tensordict>=0.10.0",
    "toml>=0.10.2",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
]

[tool.ruff]
lint.ignore = ["F722"] # Ignores F722 everywhere
